# excitement-index-soccer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  v14.yaml
data/: elo.csv  wc2026_board.csv
docs/: SCORE_CONSTRUCTION.md  TECHNICAL_APPENDIX.md
notebooks/: 01_score_a_tournament.ipynb  02_adjust_the_weights.ipynb  03_add_a_measure.ipynb
scripts/: fetch_elo.py
src/excitement_index/: __init__.py  bip.py  clock.py  config.py  jeopardy.py  opendata.py  scale.py  scoring.py  wp.py
src/excitement_index/measures/: __init__.py  aliveness.py  backforth.py  brilliance.py  chances.py  controversy.py  flow.py  keeping.py  prematch.py  registry.py  resolution.py  stakes.py  timing.py  upset.py
tests/: test_jeopardy.py  test_parity.py  test_scale.py  test_scoring.py
tests/fixtures/: arg_fra_final.json  cro_bra_qf.json  esp_crc_70.json  fra_arg_2018.json  mex_pol_00.json  ned_arg_qf.json  wc2022_board.json
